--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
   </div>
   </p>
 
-  <p><textarea class="textarea" rows=20 id="synth-spec"></textarea></p>
-  <p><textarea readonly class="textarea" rows=8 id="parse-errors"></textarea></p>
+  <table>
+    <tr>
+      <td>
+        <textarea class="textarea" rows=30 cols=60 id="synth-spec"></textarea>
+      </td>
+      <td>
+        <textarea readonly class="textarea" rows=30 cols=40 id="parse-errors"></textarea>
+      </td>
+    </tr>
+  </table>
 
   <p>
     <button class="orangebutton" id="parse-button">Parse</button>
