added dynamic parameters

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <button class="orangebutton" id="parse-button">Parse</button>
   </p>
 
+  <div id="container"></div>
+
+  </div>
   <script src="builder.js"></script>
   <script src="unpkg.com_ohm-js@17.1.0_dist_ohm.js"></script>
 
