added dynamic docstrings

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
       <td>
         <textarea readonly class="textarea" rows=30 cols=40 id="parse-errors"></textarea>
       </td>
+      <td valign="top">
+        <div id="container"></div>
+      </td>
     </tr>
   </table>
 
   <p>
     <button class="orangebutton" id="parse-button">Parse</button>
   </p>
-
-  <div id="container"></div>
 
   </div>
   <script src="builder.js"></script>
