--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h2>Synth Builder</h2>
 
   <p>
+    <button class="orangebutton" id="start-button">Start</button>
     <button class="greybutton" id="load-button">Load</button>
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
@@ -32,14 +33,23 @@
         <textarea readonly class="textarea" rows=30 cols=40 id="parse-errors"></textarea>
       </td>
       <td valign="top">
+        <div class="slider-container">
+          <input class="slider" type="range" id="pitch" min="24" max="84" value="60" step="1">
+          <label id="pitch-label" for="pitch">pitch [C4]</label>
+        </div>
+        <div class="slider-container">
+          <input class="slider" type="range" id="level" min="0" max="1" value="1" step="0.01">
+          <label id="level-label" for="level">level [1]</label>
+        </div>
+        <div class="slider-container">
+          <input class="slider" type="range" id="duration" min="0.1" max="5" value="1" step="0.1">
+          <label id="duration-label" for="duration">duration [1]</label>
+        </div>
+        <button class="playbutton" id="play-button">Play</button>
         <div id="container"></div>
       </td>
     </tr>
   </table>
-
-  <p>
-    <button class="orangebutton" id="parse-button">Parse</button>
-  </p>
 
   </div>
   <script src="builder.js"></script>
