--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 <body>
 
-  <h2>Synth Builder</h2>
+  <h2>Synth Builder<span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span></h2>
 
   <p>
     <button class="orangebutton" id="start-button">Start</button>
     <button class="greybutton" id="load-button">Load</button>
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
+    <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midi-input" id="midi-input"></select>
   </p>
 
   <p>
