fixed small bug in dropdown

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button class="greybutton" id="load-button">Load</button>
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
-    <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midi-input" id="midi-input"></select>
+    <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midiinput" id="midi-input"></select>
   </p>
 
   <p>
