--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
           <input class="slider" type="range" id="level" min="0" max="1" value="1" step="0.01">
           <label id="level-label" for="level">level [1]</label>
         </div>
+
         <div class="slider-container">
           <input class="slider" type="range" id="duration" min="0.1" max="5" value="1" step="0.1">
           <label id="duration-label" for="duration">duration [1]</label>
         </div>
+
+        <div class="slider-container">
+          <input class="slider" type="range" id="reverb" min="0" max="1" value="0.1" step="0.1">
+          <label id="reverb-label" for="reverb">reverb [1]</label>
+        </div>
+
         <button class="playbutton" id="play-button">Play</button>
         <table>
           <tr>
