added bleep logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <h2>Synth Builder<span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span></h2>
+  <h2><img width=100px src="bleep-white.png" style="object-fit: contain;"> <span style="vertical-align: 10px;"> Builder<span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span></span></h2>
 
   <p>
     <button class="orangebutton" id="start-button">Start</button>
