refactoring and added monitor

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
   <h2><img width=100px src="bleep-white.png" style="object-fit: contain;"> <span style="vertical-align: 10px;"> Builder<span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span></span></h2>
 
+  <div class="monitor" id="monitor">idle</div>
+
   <p>
     <button class="orangebutton" id="start-button">Start</button>
     <button class="greybutton" id="load-button">Load</button>
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
+    <button class="greybutton" id="export-button">Export As JSON</button>
     <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midiinput" id="midi-input"></select>
   </p>
 
