formant filter test

--- a/test.html
+++ b/test.html
@@ -11,6 +11,17 @@
 
   <h2>Test</h2>
 
+  <button class="orangebutton" id="start-button">Start</button>
+  <button class="orangebutton" id="play-button">Play</button>
+  <button class="orangebutton" id="stop-button">Stop</button>
+
+  <p></p>
+  
+  <div class="slider-container">
+    <input class="slider" type="range" id="vowel" min="0" max="1" value="0.5" step="0.01">
+    <label id="vowel-label" for="vowel">vowel</label>
+  </div>
+
   <script src="test.js"></script>
 
 </body>
