--- a/test.html
+++ b/test.html
@@ -22,6 +22,16 @@
     <label id="vowel-label" for="vowel">vowel</label>
   </div>
 
+  <div class="slider-container">
+    <input class="slider" type="range" id="resonance" min="0" max="0.5" value="0.1" step="0.01">
+    <label id="resonance-label" for="resonance">resonance</label>
+  </div>
+
+  <div class="slider-container">
+    <input class="slider" type="range" id="leak" min="0" max="1" value="0.1" step="0.01">
+    <label id="leak-label" for="leak">leak</label>
+  </div>
+
   <script src="test.js"></script>
 
 </body>
