--- a/test.html
+++ b/test.html
@@ -23,8 +23,18 @@
   </div>
 
   <div class="slider-container">
-    <input class="slider" type="range" id="resonance" min="0" max="0.5" value="0.25" step="0.01">
+    <input class="slider" type="range" id="resonance" min="0.5" max="2" value="1" step="0.01">
     <label id="resonance-label" for="resonance">resonance</label>
+  </div>
+
+  <div class="slider-container">
+    <input class="slider" type="range" id="pitch" min="0" max="127" value="60" step="1">
+    <label id="pitch-label" for="pitch">pitch</label>
+  </div>
+
+  <div class="slider-container">
+    <input class="slider" type="range" id="balance" min="-1" max="1" value="0" step="0.01">
+    <label id="balance-label" for="balance">balance</label>
   </div>
 
   <script src="test.js"></script>
