--- a/phaser.html
+++ b/phaser.html
@@ -28,18 +28,18 @@
   </div>
 
   <div class="slider-container">
-    <input class="slider" type="range" id="rate" min="0" max="1" value="0.5" step="0.01">
-    <label id="rate-label" for="rate">rate</label>
+    <input class="slider" type="range" id="frequency" min="90" max="2000" value="80" step="0.01">
+    <label id="frequency-label" for="frequency">frequency</label>
   </div>
 
   <div class="slider-container">
-    <input class="slider" type="range" id="feedback" min="0" max="1" value="0.3" step="0.01">
+    <input class="slider" type="range" id="resonance" min="0" max="1" value="0.65" step="0.01">
+    <label id="resonance-label" for="resonance">resonance</label>
+  </div>
+
+  <div class="slider-container">
+    <input class="slider" type="range" id="feedback" min="0" max="1" value="0.4" step="0.01">
     <label id="feedback-label" for="feedback">feedback</label>
-  </div>
-
-  <div class="slider-container">
-    <input class="slider" type="range" id="wet" min="0" max="1" value="0.5" step="0.01">
-    <label id="wet-label" for="wet">wet</label>
   </div>
 
   <script src="phaser.js"></script>
