--- a/moog.html
+++ b/moog.html
@@ -28,14 +28,24 @@
   </div>
 
   <div class="slider-container">
-    <input class="slider" type="range" id="cutoff" min="50" max="10000" value="500" step="0.01">
+    <input class="slider" type="range" id="cutoff" min="50" max="6000" value="500" step="0.01">
     <label id="cutoff-label" for="cutoff">cutoff</label>
   </div>
 
   <div class="slider-container">
-    <input class="slider" type="range" id="resonance" min="0" max="2" value="0" step="0.01">
+    <input class="slider" type="range" id="resonance" min="0" max="4" value="0" step="0.01">
     <label id="resonance-label" for="resonance">resonance</label>
   </div>
+
+  <div class="slider-container">
+    <input class="slider" type="range" id="drive" min="0" max="2" value="1" step="0.01">
+    <label id="drive-label" for="drive">drive</label>
+  </div>
+
+
+  <p><canvas id="scope-canvas" width="800" height="100" style="border:1px solid #000000;">
+    Your browser does not support the HTML5 canvas tag.
+  </canvas></p>
 
   <script src="moog.js"></script>
 
