--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
     <button class="greybutton" id="export-button">Export As JSON</button>
+    <button class="greybutton" id="clip-button">Copy to Clipboard</button>
     <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midiinput" id="midi-input"></select>
   </p>
 
