--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
       </td>
       <td valign="top">
         <div class="slider-container">
-          <input class="slider" type="range" id="pitch" min="24" max="108" value="60" step="1">
-          <label id="pitch-label" for="pitch">pitch [C4]</label>
+          <input class="slider" type="range" id="slider-pitch" min="24" max="108" value="60" step="1">
+          <label id="label-pitch" for="slider-pitch">pitch [C4]</label>
         </div>
         <div class="slider-container">
-          <input class="slider" type="range" id="level" min="0" max="1" value="1" step="0.01">
-          <label id="level-label" for="level">level [1]</label>
+          <input class="slider" type="range" id="slider-level" min="0" max="1" value="1" step="0.01">
+          <label id="label-level" for="slider-level">level [1]</label>
         </div>
 
         <div class="slider-container">
-          <input class="slider" type="range" id="reverb" min="0" max="1" value="0.1" step="0.01">
-          <label id="reverb-label" for="reverb">reverb [1]</label>
+          <input class="slider" type="range" id="slider-reverb" min="0" max="1" value="0.1" step="0.01">
+          <label id="label-reverb" for="slider-reverb">reverb [1]</label>
         </div>
 
         <button class="playbutton" id="play-button">Play</button>
