added RMS monitoring

--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
     Current file: none
   </div>
   </p>
-  <canvas id="scope-canvas" class="bleep-canvas" width="523" height="40">
+  <table>
+<tr><td>
+  <canvas id="scope-canvas" class="bleep-canvas" width="520" height="40">
     Your browser does not support the HTML5 canvas tag.
-  </canvas></p>
+  </canvas>
+  </td>
+  <td>
+    <div id="rms-label" class="monitor">
+      &nbsp;&nbsp;RMS=0.0000, Peak RMS=0.0000
+  </div>
+</td>
+</tr>
+</table>
 
   <table>
     <tr>
