copy docs to clipboard as markdown

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
     <button class="greybutton" id="export-button">Export As JSON</button>
-    <button class="greybutton" id="clip-button">Copy to Clipboard</button>
+    <button class="greybutton" id="clip-button">Copy Params to Clipboard</button>
+    <button class="greybutton" id="docs-button">Copy Docs to Clipboard</button>
     <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="midiinput" id="midi-input"></select>
   </p>
 
