--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <script src="unpkg.com_ohm-js@17.1.0_dist_ohm.js"></script>
 
-  <script src="builder.js" type="module"></script>
+  <script src="app.js" type="module"></script>
 
 </body>
 
