--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
 
             <div class="slider-container">
-              <input class="slider" type="range" id="slider-fx_level" min="0" max="1" value="0.1" step="0.01">
-              <label id="label-fx_level" for="slider-fx_level">fx_level [1]</label>
+              <input class="slider" type="range" id="slider-wetLevel" min="0" max="1" value="0.1" step="0.01">
+              <label id="label-wetLevel" for="slider-wetLevel">wetLevel [1]</label>
             </div>
 
             <button class="playbutton" id="play-button">Play</button>
