mono and stereo delays, patch changes, enforce use of factory method

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
               <label id="label-wetLevel" for="slider-wetLevel">wetLevel [1]</label>
             </div>
 
+            <div class="slider-container">
+              <input class="slider" type="range" id="slider-dryLevel" min="0" max="1" value="1" step="0.01">
+              <label id="label-dryLevel" for="slider-dryLevel">dryLevel [1]</label>
+            </div>
+
             <button class="playbutton" id="play-button">Play</button>
             <table>
               <tr>
