--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="sheet.css">
-  <title>Synth Builder</title>
+<head><meta charset="UTF-8">
+<link rel="stylesheet" href="sheet.css">
+<link rel="icon" type="image/png" href="./assets/img/bleep-favicon.png">
+<title>Bleep Builder</title>
 </head>
 
 <body>
