--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <button class="greybutton" id="load-button">Load</button>
     <button class="greybutton" id="save-button">Save</button>
     <button class="greybutton" id="save-as-button">Save As</button>
-    <button class="greybutton" id="clip-button">Copy Params to Clipboard</button>
-    <button class="greybutton" id="docs-button">Copy Docs to Clipboard</button>
+    <button class="greybutton" id="clip-button">Copy Params</button>
+    <button class="greybutton" id="docs-button">Copy Docs</button>
+    <button class="midibutton" id="midi-learn-button">MIDI Learn</button>
     <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="dropdown" id="midi-input"></select>
     <span id="fx-label">&nbsp;Effect:&nbsp;</span><select class="dropdown" id="fx-select"></select>
     <span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span>
