--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button class="midibutton" id="midi-learn-button">MIDI Learn</button>
     <span id="midi-label">&nbsp;Midi input:&nbsp;</span><select class="dropdown" id="midi-input"></select>
     <span id="fx-label">&nbsp;Effect:&nbsp;</span><select class="dropdown" id="fx-select"></select>
+    <span id="preset-label">&nbsp;Preset:&nbsp;</span><select class="dropdown" id="preset-select"></select>
     <span id="dot" style="color:#e6983f; opacity:0;">&nbsp;&#x25C9;</span>
   </p>
 
