various fixes to make it work on the server

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head><meta charset="UTF-8">
 <link rel="stylesheet" href="sheet.css">
 <link rel="icon" type="image/png" href="./assets/img/bleep-favicon.png">
-<title>Bleep Builder</title>
+<title>BleepSynth</title>
 </head>
 
 <body>
